--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@
         /></label>
         <br />
         <label for="email"
-          >Email <br /><input type="text" id="email" size="100%"
+          >Email <br /><input type="email" id="email" size="100%"
         /></label>
         <br />
         <label for="pesan">
