--- a/html/index.html
+++ b/html/index.html
@@ -104,13 +104,13 @@
         /></label>
         <br />
         <label for="email"
-          >Email <br /><input type="email" id="email" size="100%"
+          >Email <br /><input type="email" id="email" size="100px"
         /></label>
         <br />
         <label for="pesan">
           Pesan
           <br />
-          <textarea name="pesan" id="pesan" cols="100%" rows="10"></textarea>
+          <textarea name="pesan" id="pesan" cols="99px" rows="10"></textarea>
         </label>
         <br />
         <br />
